@@ -24,6 +24,8 @@ using System.Runtime.InteropServices;
 
 using Gtk;
 
+using Notifications;
+
 namespace LastExit
 {
 	public class TrayIcon : Gtk.EventBox {
@@ -243,33 +245,6 @@ namespace LastExit
 			event_box.LeaveNotifyEvent += OnLeaveNotifyEvent;
 		}
 		
-		[DllImport("notify")]
-		private static extern bool notify_init(string app_name);
-		
-		[DllImport("notify")]
-		private static extern void notify_uninit();
-
-		[DllImport("notify")]
-		private static extern IntPtr notify_notification_new(string summary, string message,
-									 string icon, IntPtr widget);
-
-		[DllImport("notify")]
-		private static extern void notify_notification_set_timeout(IntPtr notification,
-									   int timeout);
-		
-		[DllImport("notify")]
-		private static extern void notify_notification_set_urgency(IntPtr notification,
-									   int urgency);
-
-		[DllImport("notify")]
-		private static extern void notify_notification_set_icon_from_pixbuf(IntPtr notification, IntPtr icon);
-		
-		[DllImport("notify")]
-		private static extern bool notify_notification_show(IntPtr notification, IntPtr error);
-
-		[DllImport("libgobject-2.0-0.dll")]
-		private static extern void g_object_unref(IntPtr o);
-
 		private static void Notify (string summary, string message,
 						Gdk. Pixbuf image, Widget widget) {
 			if (show_notifications == false) {
@@ -277,22 +252,16 @@ namespace LastExit
 			}
 			
 			try {
-				if (!notify_init ("Last-Exit")) {
-					return;
-				}
-				
-				IntPtr notif = notify_notification_new 
-					(summary, message, null, widget.Handle);
-				notify_notification_set_timeout (notif, 4000);
-				notify_notification_set_urgency (notif, 0);
+				Notification nf = new Notification(summary, message);
+				nf.AttachToWidget(widget);
+				nf.Timeout = 4000;
+				nf.Urgency = Urgency.Low;
 				if (image != null) {
 					image = image.ScaleSimple (42, 42, Gdk.InterpType.Bilinear);
-					notify_notification_set_icon_from_pixbuf(notif, image.Handle);
+					nf.Icon = image;
 				}
-				
-				notify_notification_show (notif, IntPtr.Zero);
-				g_object_unref (notif);
-				notify_uninit ();
+
+				nf.Show();				
 			} catch (Exception) {
 				show_notifications = false;
 			}
